--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node seed/seedQuiz.js",
-    "vercel-start": "node server.js"
+    "seed": "node seed/seedQuiz.js"
   },
   "keywords": [],
   "author": "",
